Fix gradient text clipping on last character with padding-right

--- a/assets/css/effects.css
+++ b/assets/css/effects.css
@@ -35,6 +35,7 @@
   -webkit-background-clip: text;
   background-clip: text;
   -webkit-text-fill-color: transparent;
+  padding-right: 0.15em;
 }
 
 .typewriter-cursor {
